--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <audio autoplay>
+            <source src="Tiptoe Through The Tulips - Creepy Version (256).mp3">
+        </audio>
         <div class="container">
             <div class="column1">
                 <p>ztazhbenov</p>
